force-app/main/default/objects/Application_Budget__c/Application_Budget__c.object-meta.xml
<CustomObject>
    <label>Application Budget</label>
    <nameField>
        <label>Application Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>