force-app/main/default/objects/Application_Budget__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Budgets</relationshipLabel>
    <relationshipName>Application_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>