force-app/main/default/objects/Application_Budget__c/fields/Budget_Name__c.field-meta.xml
<CustomField>
    <fullName>Budget_Name__c</fullName>
    <label>Budget Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>