force-app/main/default/objects/Application_Budget__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <summarizedField>Application_Budget_Category__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Application_Budget_Category__c.Type__c</field>
        <operation>equals</operation>
        <value>Revenue</value>
    </summaryFilterItems>
    <summaryForeignKey>Application_Budget_Category__c.Application_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>